[fix]level 삭제 (#${12})
응답시에 level 필드가 불필요해보여 삭제